--- a/css/main.scss
+++ b/css/main.scss
@@ -5,3 +5,7 @@
 @import 'main-partials/p';
 @import 'main-partials/subtitle';
 @import 'main-partials/image';
+@import 'main-partials/allign/allign-top';
+@import 'main-partials/allign/allign-left';
+@import 'main-partials/allign/allign-right';
+@import 'main-partials/allign/allign-bottom';
